Added animate, redesign callback form, added new logo(no adaptive)

--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,17 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/app.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 <header class="header sticky-top">
   <nav class="navbar navbar-expand-md navbar-dark px-md-5">
     <a class="navbar-brand" href="#welcome-page">
-      <img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+      <img class="img-fluid" src="images/dest/logo1-doroga.jpg" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +71,7 @@
 <section id="about" class="about">
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
-    <p>ПП "Автолюкс-Черкаси-Плюс" багато років успішно працює на ринку пасажирських автобусних перевезень.</p>
+    <p>ТОВ "Автолюкс-Черкаси-Плюс" багато років успішно працює на ринку пасажирських автобусних перевезень.</p>
     <p>Історія компанії почалася з 1 транспортної одиниці та 1 маршруту. Поступово наш автопарк розширювався і сьогодні до послуг наших кліентів 35 автобусів різної місткості. Ми ретельно контролюємо технічний стан кожного транспортного засобу.</p>
     <p>Наші водії характеризуються високими знаннями технічної бази автотранспортних засобів, автомобільних доріг України, безаварійним досвідом роботи.</p>
     <h3 class="h2 text-center mb-5 pt-5">Напрямки:</h3>
@@ -182,8 +186,8 @@
           <img class="img-fluid" src="images/dest/bus/yutong2007(1).jpg" alt="YUTONG">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
-              <p class="animated fadeInUp">29 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">YUTONG</h6>
+              <p class="animate__animated animate__fadeInUp">29 місць</p>
             </div>
           </div>
         </a>
@@ -194,8 +198,8 @@
           <img class="img-fluid" src="images/dest/bus/bova fhd1998(1).jpg" alt="BOVA FHD">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">BOVA FHD</h6>
-              <p class="animated fadeInUp">33 місця</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">BOVA FHD</h6>
+              <p class="animate__animated animate__fadeInUp">33 місця</p>
             </div>
           </div>
         </a>
@@ -206,8 +210,8 @@
           <img class="img-fluid" src="images/dest/bus/mb 313cdi(1).jpg" alt="Mercedes Benz 313 CDI">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 313 CDI</h6>
-              <p class="animated fadeInUp">18 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Mercedes Benz 313 CDI</h6>
+              <p class="animate__animated animate__fadeInUp">18 місць</p>
             </div>
           </div>
         </a>
@@ -218,8 +222,8 @@
           <img class="img-fluid" src="images/dest/bus/isuzu 2005(1).jpg" alt="ISUZU">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">ISUZU</h6>
-              <p class="animated fadeInUp">30 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">ISUZU</h6>
+              <p class="animate__animated animate__fadeInUp">30 місць</p>
             </div>
           </div>
         </a>
@@ -230,8 +234,8 @@
           <img class="img-fluid" src="images/dest/bus/MAN 11.220(1).jpg" alt="MAN 11.220">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">MAN 11.220</h5>
-              <p class="animated fadeInUp">35 місць</p>
+              <h5 class="upper-text mb-1 animate__animated animate__fadeInDown">MAN 11.220</h5>
+              <p class="animate__animated animate__fadeInUp">35 місць</p>
             </div>
           </div>
         </a>
@@ -242,8 +246,8 @@
           <img class="img-fluid" src="images/dest/bus/man 11.230(1).jpg" alt="MAN 11.230">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">MAN 11.230</h6>
-              <p class="animated fadeInUp">35 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">MAN 11.230</h6>
+              <p class="animate__animated animate__fadeInUp">35 місць</p>
             </div>
           </div>
         </a>
@@ -254,8 +258,8 @@
           <img class="img-fluid" src="images/dest/bus/neoplan n213 shd(1).jpg" alt="NEOPLAN">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN</h6>
-              <p class="animated fadeInUp">49 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">NEOPLAN</h6>
+              <p class="animate__animated animate__fadeInUp">49 місць</p>
             </div>
           </div>
         </a>
@@ -266,8 +270,8 @@
           <img class="img-fluid" src="images/dest/bus/mb 316cdi 1998(1).jpg" alt="Mercedes Benz 316">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 316</h6>
-              <p class="animated fadeInUp">16-18-21 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Mercedes Benz 316</h6>
+              <p class="animate__animated animate__fadeInUp">16-18-21 місць</p>
             </div>
           </div>
         </a>
@@ -278,8 +282,8 @@
           <img class="img-fluid" src="images/dest/bus/yutong2008(1).jpg" alt="YUTONG">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
-              <p class="animated fadeInUp">29 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">YUTONG</h6>
+              <p class="animate__animated animate__fadeInUp">29 місць</p>
             </div>
           </div>
         </a>
@@ -290,8 +294,8 @@
           <img class="img-fluid" src="images/dest/bus/mb 412(1).jpg" alt="Mercedes Benz 412">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 412</h6>
-              <p class="animated fadeInUp">17 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Mercedes Benz 412</h6>
+              <p class="animate__animated animate__fadeInUp">17 місць</p>
             </div>
           </div>
         </a>
@@ -302,8 +306,8 @@
           <img class="img-fluid" src="images/dest/bus/mercedes-benz o818d(1).jpg" alt="Mercedes Benz O818D">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz O818D</h6>
-              <p class="animated fadeInUp">30 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Mercedes Benz O818D</h6>
+              <p class="animate__animated animate__fadeInUp">30 місць</p>
             </div>
           </div>
         </a>
@@ -314,8 +318,8 @@
           <img class="img-fluid" src="images/dest/bus/vw lt35(1).jpg" alt="VOLKSWAGEN lt-35">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-35</h6>
-              <p class="animated fadeInUp">16-17-20 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">VOLKSWAGEN lt-35</h6>
+              <p class="animate__animated animate__fadeInUp">16-17-20 місць</p>
             </div>
           </div>
         </a>
@@ -326,8 +330,8 @@
           <img class="img-fluid" src="images/dest/bus/neoplan1997(1).jpg" alt="NEOPLAN N213 SHD">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN N213 SHD</h6>
-              <p class="animated fadeInUp">34 місця</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">NEOPLAN N213 SHD</h6>
+              <p class="animate__animated animate__fadeInUp">34 місця</p>
             </div>
           </div>
         </a>
@@ -338,8 +342,8 @@
           <img class="img-fluid" src="images/dest/bus/scania 1994(1).jpg" alt="SCANIA">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">SCANIA</h6>
-              <p class="animated fadeInUp">55 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">SCANIA</h6>
+              <p class="animate__animated animate__fadeInUp">55 місць</p>
             </div>
           </div>
         </a>
@@ -350,8 +354,8 @@
           <img class="img-fluid" src="images/dest/bus/temza 2008(1).jpeg" alt="Temsa">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Temsa</h6>
-              <p class="animated fadeInUp">29 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Temsa</h6>
+              <p class="animate__animated animate__fadeInUp">29 місць</p>
             </div>
           </div>
         </a>
@@ -362,8 +366,8 @@
           <img class="img-fluid" src="images/dest/bus/mb 416(1).jpg" alt="Mercedes Benz 416 CDI">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 416 CDI</h6>
-              <p class="animated fadeInUp">16 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">Mercedes Benz 416 CDI</h6>
+              <p class="animate__animated animate__fadeInUp">16 місць</p>
             </div>
           </div>
         </a>
@@ -374,8 +378,8 @@
           <img class="img-fluid" src="images/dest/bus/toyota 1999(1).jpg" alt="TOYOTA">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">TOYOTA</h6>
-              <p class="animated fadeInUp">25 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">TOYOTA</h6>
+              <p class="animate__animated animate__fadeInUp">25 місць</p>
             </div>
           </div>
         </a>
@@ -386,8 +390,8 @@
           <img class="img-fluid" src="images/dest/bus/van hooi(1).jpg" alt="VAN HOOI">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">VAN HOOI</h6>
-              <p class="animated fadeInUp">56 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">VAN HOOI</h6>
+              <p class="animate__animated animate__fadeInUp">56 місць</p>
             </div>
           </div>
         </a>
@@ -398,8 +402,8 @@
           <img class="img-fluid" src="images/dest/bus/vw lt46 2000(1).jpg" alt="VOLKSWAGEN lt-46">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-46</h6>
-              <p class="animated fadeInUp">16-18 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">VOLKSWAGEN lt-46</h6>
+              <p class="animate__animated animate__fadeInUp">16-18 місць</p>
             </div>
           </div>
         </a>
@@ -410,8 +414,8 @@
           <img class="img-fluid" src="images/dest/bus/БАЗ А 079.23(1).jpg" alt="БАЗ А 079.23">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">БАЗ А 079.23</h6>
-              <p class="animated fadeInUp">28 місць</p>
+              <h6 class="upper-text mb-1 animate__animated animate__fadeInDown">БАЗ А 079.23</h6>
+              <p class="animate__animated animate__fadeInUp">28 місць</p>
             </div>
           </div>
         </a>
@@ -457,7 +461,8 @@
       </div>
 
       <!-- Форма обратной связи в модальном окне -->
-      <div class="modal" id="feedbackFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal animate__animated animate__slideInDown
+" id="feedbackFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -486,7 +491,7 @@
                       <label for="phone" class="control-label">
                         Ваш телефон
                       </label>
-                        <input id="phone" type="tel" name="phone" required="required" class="form-control" value="" placeholder="+38(___) ___ __ __">
+                        <input id="phone" type="tel" name="phone" required="required" class="form-control" value="" minlength="13" maxlength="13" placeholder="+38(___) ___ __ __">
                         <div class="invalid-feedback"></div>
                     </div>
                   </div>
