Added new logo. Change language in form

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 <header class="header sticky-top">
   <nav class="navbar navbar-expand-md navbar-dark px-md-5">
     <a class="navbar-brand" href="#welcome-page">
-      <img class="img-fluid" src="images/dest/logo1-doroga.jpg" alt="logo">
+      <img class="img-fluid" src="images/dest/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -456,7 +456,7 @@
           </li>
         </ul>
         <div class="row justify-content-center mt-5 pb-5 text-uppercase contacts-button">
-          <button class="text-nowrap btn btn-danger btn-about btn-lg m-2"  data-toggle="modal" data-target="#feedbackFormModal">Заказать звонок</button>
+          <button class="text-nowrap btn btn-danger btn-about btn-lg m-2 text-uppercase"  data-toggle="modal" data-target="#feedbackFormModal">Замовити дзвінок</button>
         </div>
       </div>
 
@@ -466,7 +466,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="myModalLabel">Форма обратной связи</h5>
+              <h5 class="modal-title" id="myModalLabel">Передзвонити Вам?</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -479,8 +479,8 @@
                   <div class="col-sm-6">
                     <!-- Имя пользователя -->
                     <div class="form-group">
-                      <label for="name" class="control-label">Ваше имя</label>
-                      <input id="name" type="text" name="name" class="form-control" value="" placeholder="Имя" minlength="2" maxlength="30" required="required">
+                      <label for="name" class="control-label">Ваше ім'я</label>
+                      <input id="name" type="text" name="name" class="form-control" value="" placeholder="Iм'я" minlength="2" maxlength="30" required="required">
                       <div class="invalid-feedback"></div>
                     </div>
                   </div>
@@ -498,8 +498,8 @@
                 </div>
                 <!-- Сообщение пользователя -->
                 <div class="form-group">
-                  <label for="message" class="control-label">Сообщение</label>
-                  <textarea id="message" name="message" class="form-control" rows="3" placeholder="Сообщение" maxlength="500"></textarea>
+                  <label for="message" class="control-label">Повідомлення</label>
+                  <textarea id="message" name="message" class="form-control" rows="3" placeholder="Ви можете залишити нам повідомлення, якщо бажаєте." maxlength="500"></textarea>
                   <div class="invalid-feedback"></div>
                 </div>
 
@@ -512,7 +512,7 @@
                 </div>
                 <!-- Сообщение -->
                 <div class="alert alert-danger form-error d-none">
-                  Исправьте данные и отправьте форму ещё раз.
+                  Виправте дані та надішліть форму ще раз.
                 </div>
                 <!-- Индикация загрузки данных формы на сервер -->
                 <div class="progress mb-2 d-none">
@@ -523,13 +523,13 @@
                 </div>
                 <!-- Кнопка для отправки формы  disabled="disabled"-->
                 <div class="text-right submit">
-                  <button type="submit" class="btn btn-primary" disabled="disabled">Отправить сообщение</button>
+                  <button type="submit" class="btn btn-primary" disabled="disabled">Надіслати</button>
                 </div>
               </form>
               <!-- Сообщение об успешной отправки формы -->
               <div class="alert alert-success form-success mb-0 d-none">
-                Форма успешно отправлена. Нажмите на
-                <a href="#" data-form="#feedbackForm">ссылку</a>, чтобы отправить ещё одно сообщение.
+                Запит успішно відправлено. Натисніть на
+                <a href="#" data-form="#feedbackForm">посилання</a>, щоб відправити ще одне повідомлення.
               </div>
             </div>
           </div>
@@ -546,7 +546,7 @@
 
 <footer class="container-fluid px-md-5 d-flex justify-content-between align-items-center">
   <a class="navbar-brand" href="#welcome-page">
-    <img class="img-fluid" src="images/dest/logo.svg" alt="logo">
+    <img class="img-fluid" src="images/dest/logo.png" alt="logo">
   </a>
   <span class="text-white">2020/All rights reserved</span>
   <button id="toTop" class="btn btn-danger"><span>^</span></button>
