--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Пасажирські перевезення</title>
-  <meta name="description" content="Пасажирські перевезення Автолюкс-Черкаси-Плюс">
+  <title>Пасажирські перевезення Автолюкс Черкаси Плюс. Транспорні послуги.</title>
+  <meta name="description" content="Пасажирські автобусні перевезення в міста ➨ Черкаси ✓ Київ ✓ Вінниця ✓ Харків ✓ Дніпро ✓ Полтава ✅ Оренда автобуса ✅ Груповий трансфер ✅ Тури на море ✅ Шкільний автобус ✅ Корпоративні поїздки">
+  <meta name="keywords" content="автобус, мікроавтобус, микроавтобус, пасажирські перевезення, пассажирские перевозки, оренда автобусів, аренда автобусов, замовити автобус, заказ автобуса, транспорні послуги, транспортные услуги, трансфер, автобусні тури">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="images/favicon.png">
-  <meta property="og:image" content="img/dest/welcome-image.webp">
+  <meta property="og:image" content="img/dest/welcome-image.png">
   <meta name="msapplication-TileColor" content="#1e5e9b">
   <meta name="theme-color" content="#1e5e9b">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -23,7 +24,7 @@
 <header class="header sticky-top">
   <nav class="navbar navbar-expand-md navbar-dark px-md-5">
     <a class="navbar-brand" href="#welcome-page">
-      <img class="img-fluid" src="images/dest/logo.png" alt="logo">
+      <img class="img-fluid" src="images/dest/logo.png" alt="АвтолюксЧеркасиПлюс">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +98,7 @@
     <div class="services-images row d-flex justify-content-center align-items-center">
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/1pasajirski_perevezennia.jpg" alt="perevezennia">
+          <img class="img-fluid" src="images/dest/services/1pasajirski_perevezennia.jpg" alt="Пасажирські перевезення по Україні">
         </div>
         <div class="services-info">
           <p>Пасажирські перевезення по Україні</p>
@@ -105,7 +106,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/2group_transfer.jpg" alt="transfer">
+          <img class="img-fluid" src="images/dest/services/2group_transfer.jpg" alt="Груповий трансфер">
         </div>
         <div class="services-info">
           <p>Груповий трансфер</p>
@@ -113,7 +114,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/3excursions.jpg" alt="excursions">
+          <img class="img-fluid" src="images/dest/services/3excursions.jpg" alt="Оренда автобуса на екскурсії">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на екскурсії</p>
@@ -121,7 +122,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/4sea.jpg" alt="sea">
+          <img class="img-fluid" src="images/dest/services/4sea.jpg" alt="Тури на море">
         </div>
         <div class="services-info">
           <p>Тури на море</p>
@@ -129,7 +130,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/5school.jpg" alt="school">
+          <img class="img-fluid" src="images/dest/services/5school.jpg" alt="Шкільний автобус">
         </div>
         <div class="services-info">
           <p>Шкільний автобус</p>
@@ -137,7 +138,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/6corporate.jpg" alt="corporate">
+          <img class="img-fluid" src="images/dest/services/6corporate.jpg" alt="Корпоративні поїздки">
         </div>
         <div class="services-info">
           <p>Корпоративні поїздки</p>
@@ -145,7 +146,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/7wedding.jpg" alt="wedding">
+          <img class="img-fluid" src="images/dest/services/7wedding.jpg" alt="Оренда автобуса на весілля">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на весілля</p>
@@ -153,7 +154,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/8religin.jpg" alt="religin">
+          <img class="img-fluid" src="images/dest/services/8religin.jpg" alt="Паломницькі та релігійні тури">
         </div>
         <div class="services-info">
           <p>Паломницькі та релігійні тури</p>
@@ -161,7 +162,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/services/9RIP.jpg" alt="RIP">
+          <img class="img-fluid" src="images/dest/services/9RIP.jpg" alt="Оренда автобуса на похорони">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на похорони</p>
@@ -546,10 +547,10 @@
 
 <footer class="container-fluid px-md-5 d-flex justify-content-between align-items-center">
   <a class="navbar-brand" href="#welcome-page">
-    <img class="img-fluid" src="images/dest/logo.png" alt="logo">
+    <img class="img-fluid" src="images/dest/logo.png" alt="АвтолюксЧеркасиПлюс">
   </a>
   <span class="text-white">2020/All rights reserved</span>
-  <button id="toTop" class="btn btn-danger"><span>^</span></button>
+  <button title="Наверх&#8593;" id="toTop" class="btn btn-danger"><span>^</span></button>
 
 </footer>
 
