Added og:image for link in the social net

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>Пасажирські перевезення Автолюкс Черкаси Плюс. Транспорні послуги.</title>
   <meta name="description" content="Пасажирські автобусні перевезення в міста ➨ Черкаси ✓ Київ ✓ Вінниця ✓ Харків ✓ Дніпро ✓ Полтава ✅ Оренда автобуса ✅ Груповий трансфер ✅ Тури на море ✅ Шкільний автобус ✅ Корпоративні поїздки">
-  <meta name="keywords" content="автобус, мікроавтобус, микроавтобус, пасажирські перевезення, пассажирские перевозки, оренда автобусів, аренда автобусов, замовити автобус, заказ автобуса, транспорні послуги, транспортные услуги, трансфер, автобусні тури">
+  <meta name="keywords" content="автолюкс, черкассы, черкаси, автолюксплюс, автобус, мікроавтобус, микроавтобус, пасажирські перевезення, пассажирские перевозки, оренда автобусів, аренда автобусов, замовити автобус, заказ автобуса, транспорні послуги, транспортные услуги, трансфер, автобусні тури">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="images/favicon.png">
-  <meta property="og:image" content="img/dest/welcome-image.png">
+  <meta property="og:image" content="images/dest/welcome-image.png">
   <meta name="msapplication-TileColor" content="#1e5e9b">
   <meta name="theme-color" content="#1e5e9b">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap&subset=cyrillic" rel="stylesheet">
